--- a/index.html
+++ b/index.html
@@ -27,5 +27,6 @@
         <button id="reset">Play Again</button>
       </div>
     </div>
+    <script src="./main.js"></script>
   </body>
 </html>
