--- a/index.html
+++ b/index.html
@@ -3,30 +3,32 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hangman Game</title>
+    <title>Document</title>
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
     <div class="wrapper">
       <h1>Hangman</h1>
-      <h2>Vanilla Javascript Hangman Game</h2>
+      <h2>Vanilla JavaScript Hangman Game</h2>
       <p>
-        Use the alphabet below to guess the word, or click hint to get the clue.
+        Use the alphabet below to guess the word, or click hint to get a clue.
       </p>
     </div>
     <div class="wrapper">
       <div id="buttons"></div>
-      <p id="categoryName"></p>
+      <p id="catagoryName"></p>
+      <div id="hold"></div>
+      <p id="mylives"></p>
       <p id="clue">Clue -</p>
-      <canvas
-        >This text will show if Browser does not support HTML5 Canvas
+      <canvas id="stickman"
+        >This Text will show if the Browser does NOT support HTML5 Canvas
         tag</canvas
       >
       <div class="container">
         <button id="hint">Hint</button>
-        <button id="reset">Play Again</button>
+        <button id="reset">Play again</button>
       </div>
     </div>
-    <script src="./main.js"></script>
+    <script src="/main.js"></script>
   </body>
 </html>
